--- a/garden-shop/dev/components/home-slider/home-slider.html
+++ b/garden-shop/dev/components/home-slider/home-slider.html
@@ -13,8 +13,8 @@
                     <picture>
                         <source media="(max-width: 570px)"
                             srcset="./images/home-slider/mob-banner.png">
-                        <source media="(max-width: 768px)"
-                            srcset="./images/home-slider/tab-banner.png">
+                        <!-- <source media="(max-width: 1024px)"
+                            srcset="./images/home-slider/tab-banner.png"> -->
                         <img src="./images/home-slider/web-banner.png" alt="img">
                     </picture>
                 </div>
@@ -30,8 +30,8 @@
                     <picture>
                         <source media="(max-width: 570px)"
                             srcset="./images/home-slider/mob-banner.png">
-                        <source media="(max-width: 768px)"
-                            srcset="./images/home-slider/tab-banner.png">
+                        <!-- <source media="(max-width: 1024px)"
+                            srcset="./images/home-slider/tab-banner.png"> -->
                         <img src="./images/home-slider/web-banner.png" alt="img">
                     </picture>
                 </div>
@@ -47,8 +47,8 @@
                     <picture>
                         <source media="(max-width: 570px)"
                             srcset="./images/home-slider/mob-banner.png">
-                        <source media="(max-width: 768px)"
-                            srcset="./images/home-slider/tab-banner.png">
+                        <!-- <source media="(max-width: 1024px)"
+                            srcset="./images/home-slider/tab-banner.png"> -->
                         <img src="./images/home-slider/web-banner.png" alt="img">
                     </picture>
                 </div>
