--- a/garden-shop/release/components/header/header.html
+++ b/garden-shop/release/components/header/header.html
@@ -253,4 +253,43 @@
 				</div>
 			</div>
 		</header>
+		<menu class="menu">
+			<div class="menu__list caption-small">
+				<a href="" class="menu__item">
+					<div class="menu__item-icon menu__item-icon_notification">
+						<img src="../../images/icons/menu-icon-1.svg" alt="icon">
+						<span></span>
+					</div>
+					<div class="menu__item-text">Главная</div>
+				</a>
+				<a href="" class="menu__item menu__item_notification">
+					<div class="menu__item-icon">
+						<img src="../../images/icons/menu-icon-2.svg" alt="icon">
+						<span>8</span>
+					</div>
+					<div class="menu__item-text">Каталог</div>
+				</a>
+				<a href="" class="menu__item">
+					<div class="menu__item-icon">
+						<img src="../../images/icons/menu-icon-3.svg" alt="icon">
+						<span></span>
+					</div>
+					<div class="menu__item-text">Корзина</div>
+				</a>
+				<a href="" class="menu__item">
+					<div class="menu__item-icon">
+						<img src="../../images/icons/menu-icon-4.svg" alt="icon">
+						<span></span>
+					</div>
+					<div class="menu__item-text">Профиль</div>
+				</a>
+				<div class="menu__item menu__btn">
+					<div class="menu__item-icon">
+						<img src="../../images/icons/menu-icon-btn.svg" alt="icon">
+						<span></span>
+					</div>
+					<div class="menu__item-text">Меню</div>
+				</div>
+			</div>
+		</menu>
 		<main class="main">
