--- a/garden-shop/dev/components/advantages/advantages.scss
+++ b/garden-shop/dev/components/advantages/advantages.scss
@@ -30,3 +30,12 @@
         gap: 15px;
     }
 }
+
+@media (max-width: 570px) {
+    .advantages {
+        &__wrapper {
+            gap: 15px;
+            row-gap: 10px;
+        }
+    }
+}
