--- a/garden-shop/dev/components/card/card.scss
+++ b/garden-shop/dev/components/card/card.scss
@@ -32,7 +32,9 @@
     }
     &__img {
         margin-top: 40px;
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     &__sticker {
         height: 30px;
@@ -121,14 +123,6 @@
             &__name {
                 margin: 0;
                 margin-bottom: 10px;
-            }
-            &__mid {
-                flex-direction: column-reverse;
-                align-items: flex-start;
-                justify-content: space-between;
-                gap: 10px;
-                margin-bottom: 10px;
-                height: 100%;
             }
         }
     }
@@ -220,5 +214,108 @@
         width: 50px;
         height: 50px;
         cursor: pointer;
+    }
+}
+
+@media (min-width: 768px) {
+    .card {
+        &_kit {
+            & .card {
+                &__mid {
+                    flex-direction: column-reverse;
+                    align-items: flex-start;
+                    justify-content: space-between;
+                    gap: 10px;
+                    margin-bottom: 10px;
+                    height: 100%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .card {
+        &_kit {
+            height: auto;
+            width: 360px;
+        }
+        &__header {
+            flex-direction: column;
+            gap: 15px;
+            display: flex;
+        }
+        &__main-info {
+            flex-direction: column;
+            gap: 10px;
+        }
+        &__mid {
+            margin-bottom: 10px;
+        }
+        &__body {
+            flex-direction: column;
+            gap: 12px;
+        }
+        &__kit-list {
+            width: 100%;
+            max-height: none;
+            overflow-x: auto;
+            padding: 0;
+            padding-bottom: 10px;
+            &::-webkit-scrollbar {
+                height: 5px;
+            }
+        }
+        &__kit-list-wrapper {
+            flex-direction: row;
+            gap: 15px;
+        }
+        &__kit-item {
+            min-width: 258px;
+            display: flex;
+            padding: 8px 10px;
+            gap: 10px;
+        }
+        &__kit-item-img {
+            margin: 0;
+        }
+        &__kit-price {
+            flex-direction: column;
+            gap: 15px;
+        }
+        &__kit-price-info {
+            width: 100%;
+            justify-content: space-between;
+        }
+        &__kit-price-profit {
+            display: none;
+        }
+        &__kit-price-btn {
+            width: 100%;
+        }
+        &__gallery {
+            height: auto;
+            max-width: 300px;
+        }
+    }
+}
+
+@media (max-width: 680px) {
+    .card {
+        padding: 15px;
+        width: 100%;
+        &_kit {
+            padding: 0;
+        }
+        &__body {
+            padding: 15px;
+        }
+        &__top {
+            padding: 0 15px;
+            top: 15px;
+        }
+        &__kit-price {
+            padding: 15px;
+        }
     }
 }
