--- a/garden-shop/dev/components/footer/footer.html
+++ b/garden-shop/dev/components/footer/footer.html
@@ -7,7 +7,7 @@
                     <li class="footer__nav-item footer__nav-item_has-children">
                         <a class="footer__nav-link footer__nav-link_lvl1" href="">Покупателям</a>
                         <ul class="footer__subnav">
-                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Минитракторы</a></li>
+                            <li><a class="footer__nav-link footer__nav-link_lvl2" href="#">Минитракторы</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Мотоблоки</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Навесное оборудование</a></li>
@@ -159,6 +159,13 @@
 </footer>
 </div>
 
+<div class="popup-info orange-bg white-text">
+    <div class="popup-info__text ">
+        Наш сайт использует куки-файлы. Продолжая пользоваться garden-shop.ru, вы соглашаетесь на обработку персональных
+        данных в соответствии с политикой конфиденциальности
+    </div>
+    <div class="popup-info__close"></div>
+</div>
 
 </body>
 
