--- a/garden-shop/dev/components/header/header.scss
+++ b/garden-shop/dev/components/header/header.scss
@@ -33,12 +33,6 @@
     &__line-logo {
         object-fit: contain;
     }
-    &__line-img {
-        height: 100%;
-        & img {
-            height: 100%;
-        }
-    }
     &__link {
         display: flex;
         gap: 5px;
@@ -214,7 +208,92 @@
     }
 }
 
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 100;
+    display: none;
+    transition: all ease 0.5s;
+    &_open {
+        background-color: rgba(18, 65, 68, 0.8);
+        & .menu {
+            &__nav {
+                transform: none;
+            }
+        }
+    }
+    &__list {
+        display: flex;
+        gap: 15px;
+        justify-content: space-between;
+        padding: 11px 15px;
+        background-color: #fff;
+        border-top: 1px solid #ebebeb;
+        pointer-events: all;
+        margin-top: auto;
+        width: 100%;
+    }
+    &__item {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        align-items: center;
+        &_notification {
+            & .menu__item-icon span {
+                display: flex;
+            }
+        }
+    }
+    &__item-icon {
+        position: relative;
+        width: 24px;
+        height: 24px;
+        & span {
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            width: 15px;
+            height: 15px;
+            color: #fff;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 130%;
+            position: absolute;
+            right: -6px;
+            top: -6px;
+            background-color: #f93232;
+
+            display: none;
+        }
+    }
+    &__nav {
+        pointer-events: all;
+        position: absolute;
+        z-index: -1;
+        top: 15px;
+        left: 15px;
+        height: 100%;
+        width: calc(100% - 30px);
+        border-radius: 5px;
+        padding: 15px;
+        background-color: #fff;
+        transition: all ease 0.5s;
+        transform: translateY(100%);
+    }
+    &__nav-logo {
+        width: 104px;
+        height: 33px;
+    }
+}
+
 @media (max-width: 1150px) {
+    .menu {
+        display: flex;
+    }
     .header {
         &__body {
             gap: 15px;
@@ -246,6 +325,9 @@
         &__nav-links {
             padding: 14px 15px;
             gap: 20px;
+        }
+        &__btm {
+            padding-top: 5px;
         }
     }
     .search {
