--- a/garden-shop/dev/components/home-slider/home-slider.scss
+++ b/garden-shop/dev/components/home-slider/home-slider.scss
@@ -1,8 +1,8 @@
 .home-slider {
     width: 100%;
     &__container {
-        max-width: 880px;
         height: 396px;
+        max-width: 880px;
         width: 100%;
         position: relative;
         z-index: 1;
@@ -16,7 +16,6 @@
         z-index: 1;
         border-radius: 5px;
         overflow: hidden;
-        padding-left: 40px;
     }
     &__desc {
         margin-bottom: 0;
@@ -42,13 +41,65 @@
     }
     &__text {
         max-width: 300px;
-    }
-    &__img {
         position: absolute;
-        left: 0;
+        left: 40px;
         top: 0;
         width: 100%;
         height: 100%;
-        z-index: -1;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    &__img {
+        height: 100%;
+        width: 100%;
+        & img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            object-position: left center;
+        }
+    }
+}
+
+@media (max-width: 1650px) {
+    .home-slider {
+        &__title {
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .home-slider {
+        &__container {
+            overflow: visible;
+        }
+    }
+}
+
+@media (max-width: 570px) {
+    .home-slider {
+        &__container {
+            height: auto;
+        }
+        &__text {
+            left: 10px;
+            top: 10px;
+            justify-content: flex-start;
+            max-width: 200px;
+        }
+        &__title {
+            font-size: 30px;
+            line-height: 42px;
+            &_leaf {
+                &::before {
+                    display: none;
+                }
+            }
+        }
+        &__desc {
+            margin-top: 0;
+        }
     }
 }
