--- a/garden-shop/dev/components/line-form/line-form.scss
+++ b/garden-shop/dev/components/line-form/line-form.scss
@@ -93,3 +93,42 @@
         z-index: 3;
     }
 }
+
+@media (max-width: 1200px) {
+    .line-form {
+        &__item {
+            flex-direction: column;
+            align-items: flex-start;
+            background-position: right bottom -20px;
+            gap: 30px;
+        }
+        &__title {
+            padding-right: 40px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .line-form {
+        &__item {
+            padding: 15px;
+        }
+        &__wrapper {
+            gap: 15px;
+        }
+    }
+}
+
+@media (max-width: 570px) {
+    .line-form {
+        &__wrapper {
+            flex-direction: column;
+        }
+        &__item {
+            background-position: right bottom -30px;
+        }
+        &__info {
+            background-position: right bottom -45px;
+        }
+    }
+}
