--- a/garden-shop/release/components/default-slider/default-slider.html
+++ b/garden-shop/release/components/default-slider/default-slider.html
@@ -324,28 +324,56 @@
                                         <a href="" class="card__kit-item-img">
                                             <img src="../../images/kit.png" alt="img">
                                         </a>
-                                        <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
-                                            СКАУТ
-                                        </a>
-                                        <div class="card__kit-item-price caption demibold">30 000 ₽</div>
+                                        <div class="card__kit-item-text">
+                                            <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
+                                                СКАУТ
+                                            </a>
+                                            <div class="card__kit-item-price caption demibold">30 000 ₽</div>
+                                        </div>
                                     </div>
                                     <div class="card__kit-item">
                                         <a href="" class="card__kit-item-img">
                                             <img src="../../images/kit.png" alt="img">
                                         </a>
-                                        <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
-                                            СКАУТ
-                                        </a>
-                                        <div class="card__kit-item-price caption demibold">30 000 ₽</div>
+                                        <div class="card__kit-item-text">
+                                            <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
+                                                СКАУТ
+                                            </a>
+                                            <div class="card__kit-item-price caption demibold">30 000 ₽</div>
+                                        </div>
                                     </div>
                                     <div class="card__kit-item">
                                         <a href="" class="card__kit-item-img">
                                             <img src="../../images/kit.png" alt="img">
                                         </a>
-                                        <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
-                                            СКАУТ
+                                        <div class="card__kit-item-text">
+                                            <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
+                                                СКАУТ
+                                            </a>
+                                            <div class="card__kit-item-price caption demibold">30 000 ₽</div>
+                                        </div>
+                                    </div>
+                                    <div class="card__kit-item">
+                                        <a href="" class="card__kit-item-img">
+                                            <img src="../../images/kit.png" alt="img">
                                         </a>
-                                        <div class="card__kit-item-price caption demibold">30 000 ₽</div>
+                                        <div class="card__kit-item-text">
+                                            <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
+                                                СКАУТ
+                                            </a>
+                                            <div class="card__kit-item-price caption demibold">30 000 ₽</div>
+                                        </div>
+                                    </div>
+                                    <div class="card__kit-item">
+                                        <a href="" class="card__kit-item-img">
+                                            <img src="../../images/kit.png" alt="img">
+                                        </a>
+                                        <div class="card__kit-item-text">
+                                            <a href="" class="card__kit-item-name caption">Плуг двухкорпусный навесной
+                                                СКАУТ
+                                            </a>
+                                            <div class="card__kit-item-price caption demibold">30 000 ₽</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
