--- a/garden-shop/release/components/header/header.css
+++ b/garden-shop/release/components/header/header.css
@@ -29,12 +29,6 @@
 .header__line-logo {
   object-fit: contain;
 }
-.header__line-img {
-  height: 100%;
-}
-.header__line-img img {
-  height: 100%;
-}
 .header__link {
   display: flex;
   gap: 5px;
@@ -209,7 +203,87 @@
   width: 100%;
 }
 
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 100;
+  display: none;
+  transition: all ease 0.5s;
+}
+.menu_open {
+  background-color: rgba(18, 65, 68, 0.8);
+}
+.menu_open .menu__nav {
+  transform: none;
+}
+.menu__list {
+  display: flex;
+  gap: 15px;
+  justify-content: space-between;
+  padding: 11px 15px;
+  background-color: #fff;
+  border-top: 1px solid #ebebeb;
+  pointer-events: all;
+  margin-top: auto;
+  width: 100%;
+}
+.menu__item {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+}
+.menu__item_notification .menu__item-icon span {
+  display: flex;
+}
+.menu__item-icon {
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+.menu__item-icon span {
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 130%;
+  position: absolute;
+  right: -6px;
+  top: -6px;
+  background-color: #f93232;
+  display: none;
+}
+.menu__nav {
+  pointer-events: all;
+  position: absolute;
+  z-index: -1;
+  top: 15px;
+  left: 15px;
+  height: 100%;
+  width: calc(100% - 30px);
+  border-radius: 5px;
+  padding: 15px;
+  background-color: #fff;
+  transition: all ease 0.5s;
+  transform: translateY(100%);
+}
+.menu__nav-logo {
+  width: 104px;
+  height: 33px;
+}
+
 @media (max-width: 1150px) {
+  .menu {
+    display: flex;
+  }
   .header__body {
     gap: 15px;
   }
@@ -240,6 +314,9 @@
   .header__nav-links {
     padding: 14px 15px;
     gap: 20px;
+  }
+  .header__btm {
+    padding-top: 5px;
   }
   .search__form {
     gap: 5px;
