--- a/garden-shop/release/components/home-slider/home-slider.css
+++ b/garden-shop/release/components/home-slider/home-slider.css
@@ -2,8 +2,8 @@
   width: 100%;
 }
 .home-slider__container {
-  max-width: 880px;
   height: 396px;
+  max-width: 880px;
   width: 100%;
   position: relative;
   z-index: 1;
@@ -17,7 +17,6 @@
   z-index: 1;
   border-radius: 5px;
   overflow: hidden;
-  padding-left: 40px;
 }
 .home-slider__desc {
   margin-bottom: 0;
@@ -41,12 +40,50 @@
 }
 .home-slider__text {
   max-width: 300px;
-}
-.home-slider__img {
   position: absolute;
-  left: 0;
+  left: 40px;
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.home-slider__img {
+  height: 100%;
+  width: 100%;
+}
+.home-slider__img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: left center;
+}
+
+@media (max-width: 1024px) {
+  .home-slider__container {
+    overflow: visible;
+  }
+}
+@media (max-width: 570px) {
+  .home-slider__container {
+    height: auto;
+  }
+  .home-slider__text {
+    left: 10px;
+    top: 10px;
+    justify-content: flex-start;
+    max-width: 200px;
+  }
+  .home-slider__title {
+    font-size: 30px;
+    line-height: 42px;
+  }
+  .home-slider__title_leaf::before {
+    display: none;
+  }
+  .home-slider__desc {
+    margin-top: 0;
+  }
 }
