--- a/garden-shop/release/components/line-form/line-form.css
+++ b/garden-shop/release/components/line-form/line-form.css
@@ -88,3 +88,34 @@
   position: relative;
   z-index: 3;
 }
+
+@media (max-width: 1200px) {
+  .line-form__item {
+    flex-direction: column;
+    align-items: flex-start;
+    background-position: right bottom -20px;
+    gap: 30px;
+  }
+  .line-form__title {
+    padding-right: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .line-form__item {
+    padding: 15px;
+  }
+  .line-form__wrapper {
+    gap: 15px;
+  }
+}
+@media (max-width: 570px) {
+  .line-form__wrapper {
+    flex-direction: column;
+  }
+  .line-form__item {
+    background-position: right bottom -30px;
+  }
+  .line-form__info {
+    background-position: right bottom -45px;
+  }
+}
